2007/11/24
	33. Added dependence to MatrixAbstractLayer (removed from abstractRobotDynamics).

dynamic-JRLJapan 1.6.99 current version

	32. correct make file to compile untesting using the current (devel) version
	31. made new version number
	
dynamic-JRLJapan 1.6 released November 8, 2007

	30. Removed unused and misleading function
              inline void HumanoidDynamicMultiBody::gaze() const
	29. Changed name of functions setting and getting joint bounds to
	    fit abstract interface latest changes.
	28. Class HumanoidDynamicMultiBody now virtually derives from DynamicMultiBody.
	    Changes for users:
	      - HumanoidDynamicMultiBody::getDynamicMultiBody() has been removed.
	      - Prototypes of HumanoidDynamicMultiBody constructors have
	    been slightly modified.
	27. Added the files necessary for the Spirit VRML reader.
	26. Make constructors of JointFreeflyer, JointRotation and
	    JointTranslation public.
	25. Remove const in Joint::addChildJoint (const CjrlJoint&
	    inJoint) in order to be able to modify joints in kinematic chain.
	24. Joint::parentJoint() and Joint::childJoint(unsigned int
	    inJointRank) return pointer to CjrlJoint instead of reference.
	23. Added file include/dynamicsJRLJapan/robotDynamicsImpl.h
	22. Move headers to include/dynamicsJRLJapan instead of
	    include/robotDynamicsJRLJapan
	21. Undo item 20
	20. Export in dynamicsJRLJapan.pc name of classes implementing 
	  - abstractRobotDynamics::CjrlDynamicRobot,
	  - abstractRobotDynamics::CjrlHumanoidDynamicRobot
	  - freeFlying joint,
	  - rotation joint,
	  - translation joint.
	19. Use name "dynamicsJRLJapan" as package name and documentation
	directory installation.
	
dynamics-JRLJapan 1.4 released July 16, 2007

	18. (fumio) bug fix for values of rotation field in VRML.
	17. (fumio) add default implementations for
        CjrlDynamicRobot::upperBoundDof(int, const vectorN&) and
        CjrlDynamicRobot::lowerBoundDof(int, const vectorN&).
