@@ -1,3 +1,6 @@
+2008/01/21
+	34. Unit test TestBuildFromJointTreeMathieu now integrally builds the copy of the humanoid robot through the abstract interface.
+	
 2007/11/24
 	33. Added dependence to MatrixAbstractLayer (removed from abstractRobotDynamics).
 
